# RRIP-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  func.cpp  func.h  main.cpp  result.in  rrip.cpp  rrip.hpp  start.sh  supercache.hpp  test.in  test1.in
Google_tests/: CMakeLists.txt  CMakeLists.txt(main)  test_rrip.cpp
RRIP-realization/: rrip.cpp
cmake/: build-flags.cmake  find-boost.cmake
hash/: ht_functions.cpp  ht_functions.h  ht_linked_list.cpp  ht_linked_list.h
ideal_cache/: CMakeLists.txt  ideal_cache.cpp  ideal_cache.hpp  supercache.cpp
ideal_cache-realization/: ideal_cache.hpp
include/ideal_cache/: ideal_cache.hpp
include/main/: main.hpp
include/rrip/: rrip.hpp
incude/ideal_cache/: ideal_cache.hpp
incude/rrip/: rrip.hpp
lib/: CMakeLists.txt
lib/ideal_cache/: CMakeLists.txt  ideal_cache.cpp
lib/rrip/: CMakeLists.txt  rrip.cpp
rrip/: CMakeLists.txt  rrip.cpp  rrip.hpp
tests/: bash.sh  test4.in  test5.in  test6.in  testing.sh
tests/mixed_access1_pattern/: ma1_test1.in  ma1_test6.in
tests/mixed_access2_pattern/: ma2_test2.in
tests/other_tests/: test1.in  test10.in  test11.in  test12.in  test13.in  test2.in  test8.in
tests/recency_friendly_access_pattern/: rfa_test1.in  rfa_test4.in
tests/thrashing_access_pattern/: ta_test1.in  ta_test2.in  ta_test4.in
